--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
   </div>
   <div class="footer">
-    <p>Made with ❤️ by Sourav Kumar Singh!</p>
+    <p>Made with ❤️ by Sanghavi!</p>
   </div>
   <script src="./js/app.js"></script>
   <!-- main end -->
